--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "mergado/mergado-api-client": "dev-master",
         "laravelcollective/html": "v5.2.4",
         "maatwebsite/excel": "2.1.x-dev",
-        "graham-campbell/htmlmin": "v4.2.1"
+        "graham-campbell/htmlmin": "v4.2.1",
+        "genealabs/laravel-caffeine": "0.3.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
